# dpy-seriesformatter

./: README.md  main.py  pyproject.toml
src/dpyseriesformatter/: __init__.py
tests/: test.py
