[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dpy-seriesformatter"
version = "0.0.1"
authors = [
    { name = "Tanner B. Corcoran", email = "tannerbcorcoran@gmail.com" },
]
description = "A general framework that allows you to create great looking series embeds with ease"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "discord.py >= 2.0.0",
]

[project.urls]
"Source" = "https://github.com/tanrbobanr/dpy-seriesformatter"